--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>Sunucu Adı</title>
+  <title>Sunucuya Hoş Geldiniz</title>
   <style>
     body {
       margin: 0;
@@ -13,25 +13,27 @@
       text-align: center;
     }
     .ortala {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      margin-top: 100px;
     }
     h1 {
       font-size: 48px;
       text-shadow: 2px 2px 5px black;
     }
     p {
-      font-size: 24px;
+      font-size: 22px;
       text-shadow: 1px 1px 3px black;
     }
-  </style>
-</head>
-<body>
-  <div class="ortala">
-    <h1>Sunucumuza Hoş Geldin!</h1>
-    <p>IP: play.sunucuadi.com</p>
-  </div>
-</body>
-</html>
+    .alt-menu {
+      position: absolute;
+      bottom: 50px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 15px;
+    }
+    .buton {
+      background: rgba(0, 0, 0, 0.6);
+      border-radius: 25px;
+      padding: 15px 25px;
+      font
