--- a/index.html
+++ b/index.html
@@ -36,4 +36,29 @@
       background: rgba(0, 0, 0, 0.6);
       border-radius: 25px;
       padding: 15px 25px;
-      font
+      font-size: 18px;
+      cursor: pointer;
+      transition: 0.3s;
+      border: 2px solid white;
+    }
+    .buton:hover {
+      background: rgba(255, 255, 255, 0.2);
+    }
+  </style>
+</head>
+<body>
+  <div class="ortala">
+    <h1>Sunucumuza Hoş Geldiniz!</h1>
+    <p>IP: 31.56.87.150:25933</p>
+    <p>Sürüm: 1.16.5 - 1.21</p>
+  </div>
+
+  <div class="alt-menu">
+    <div class="buton">Discord</div>
+    <div class="buton">VIP Alım</div>
+    <div class="buton">Anahtar Alım</div>
+    <div class="buton">Kurallar</div>
+    <div class="buton">Aktif Oyuncular</div>
+  </div>
+</body>
+</html>
