--- a/index.html
+++ b/index.html
@@ -16,30 +16,29 @@
       margin-top: 100px;
     }
     h1 {
-      font-size: 48px;
-      text-shadow: 2px 2px 5px black;
+      font-size: 54px;
+      text-shadow: 2px 2px 6px black;
     }
     p {
-      font-size: 22px;
+      font-size: 26px;
       text-shadow: 1px 1px 3px black;
     }
     .alt-menu {
-      position: absolute;
-      bottom: 50px;
-      width: 100%;
+      margin-top: 100px;
       display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: center;
       gap: 15px;
     }
     .buton {
-      background: rgba(0, 0, 0, 0.6);
-      border-radius: 25px;
-      padding: 15px 25px;
-      font-size: 18px;
+      background: rgba(0, 0, 0, 0.7);
+      border-radius: 30px;
+      padding: 20px 40px;
+      font-size: 24px;
       cursor: pointer;
       transition: 0.3s;
       border: 2px solid white;
+      width: 300px;
     }
     .buton:hover {
       background: rgba(255, 255, 255, 0.2);
