--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BGPC Network</title>
+  <title>SarıkolaNW Network</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
   <style>
@@ -15,7 +15,7 @@
   <header class="navbar">
     <div class="logo-container">
       <img src="logo.png" alt="BGPC Logo" class="logo" />
-      <span class="server-name">BGPC Network</span>
+      <span class="server-name">SarıkolaNW Network</span>
     </div>
     <nav>
       <ul class="nav-links">
@@ -33,8 +33,8 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1>BGPC Network’e Hoş Geldin!</h1>
-      <p class="server-ip" id="ip">realms.gg/hb7nB-TopWc</p>
+      <h1>SarıkolaNW Network’e Hoş Geldin!</h1>
+      <p class="server-ip" id="ip">31.56.87.150:25933 1.16.5 ile 1.21</p>
     </div>
   </section>
 
@@ -69,3 +69,4 @@
   </script>
 </body>
 </html>
+
