--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SarıkolaNW Network</title>
+  <title>Sarıkola Network</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
   <style>
@@ -15,17 +15,16 @@
   <header class="navbar">
     <div class="logo-container">
       <img src="logo.png" alt="BGPC Logo" class="logo" />
-      <span class="server-name">SarıkolaNW Network</span>
+      <span class="server-name">Sarıkola Network</span>
     </div>
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Ana Menü</a></li>
-        <li><a href="#harita">Harita</a></li>
         <li><a href="#sunucu">Sunucu</a></li>
         <li><a href="#bilgi">Bilgi</a></li>
         <li><a href="https://eastondean195.wixsite.com/justincityfourms">Forum</a></li>
-        <li><a href="https://discord.gg/soon">Discord</a></li>
-        <li><a href="https://mcrealmhub.com/realm-justin-city.454/vote">Oy Ver</a></li>
+        <li><a href="https://discord.gg/kTsj44Bf">Discord</a></li>
+        <li><a href="https://minecraft-mp.com/server/343359/vote/">Oy Ver</a></li>
         <li><a href="https://sites.google.com/view/justin-city/join">Katıl</a></li>
       </ul>
     </nav>
@@ -69,4 +68,5 @@
   </script>
 </body>
 </html>
+
 
