--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1>SarıkolaNW Network’e Hoş Geldin!</h1>
+      <h1>Sarıkola Network’e Hoş Geldin!</h1>
       <p class="server-ip" id="ip">31.56.87.150:25933 1.16.5 ile 1.21</p>
     </div>
   </section>
 
-  <section id="harita" class="section-info">
-    <h2>Harita</h2>
-    <p>Sunucu haritamız hakkında bilgiler burada olacak. İstersen harita görseli veya açıklamalar ekleyebiliriz.</p>
+  <section id="Oy ver" class="section-info">
+    <h2>Oy ver</h2>
+    <p>Sunucumuza Destek Olmak İsterseniz Bize Oy Vermeyi Unutmayın.</p>
   </section>
 
   <section id="sunucu" class="section-info">
@@ -68,5 +68,6 @@
   </script>
 </body>
 </html>
+
 
 
